--- a/src/main/webapp/app/account/view/studentEdit.html
+++ b/src/main/webapp/app/account/view/studentEdit.html
@@ -29,9 +29,24 @@
     </div>
 
     <div class="form-group" ng-class="{ 'has-error' : studentForm.institution.$invalid && !studentForm.institution.$pristine }">
-      <label class="col-sm-2 control-label" for="state">Institution</label>
+      <label class="col-sm-2 control-label" for="institution">Institution</label>
       <div class="col-sm-2">
-        <input class="form-control" type="text" id="institution" placeholder="State" ng-model="student.institution" name="institution" required>
+        <input class="form-control" type="text" id="institution" placeholder="Institution" ng-model="student.institution" name="institution" required>
+      </div>
+    </div>
+
+    <div class="form-group" ng-class="{ 'has-error' : studentForm.balance.$invalid && !studentForm.balance.$pristine }">
+      <label class="col-sm-2 control-label" for="balance">Balance</label>
+      <div class="col-sm-2">
+        <input class="form-control" type="text" id="balance" placeholder="Balance" ng-model="student.balance" ng-readonly="true" name="balance" required>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <div class="col-sm-offset-2 col-sm-10">
+        <button class="btn btn-primary" ng-click="addToBalance(10)">Add $10 to balance</button>
+        <button class="btn btn-primary" ng-click="addToBalance(25)">Add $25 to balance</button>
+        <button class="btn btn-primary" ng-click="addToBalance(50)">Add $50 to balance</button>
       </div>
     </div>
 
